<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/app_title"
        android:layout_gravity="center_horizontal"
        android:textSize="10pt"
        android:paddingTop="10dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/oauth2_access_token_title"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:id="@+id/oauth2_access_token"
        android:text="@string/oauth2_access_token"
        android:paddingBottom="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/oauth2_refresh_token_title"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:id="@+id/oauth2_refresh_token"
        android:text="@string/oauth2_refresh_token"
        android:paddingBottom="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/oidc_subject_title"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:id="@+id/oidc_subject"
        android:text="@string/oidc_subject"
        android:paddingBottom="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"/>
    <Button
        android:text="@string/button_launch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="launchBrowser"
        android:layout_gravity="center_horizontal" />
    <Button
        android:text="@string/button_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="refreshToken"
        android:layout_gravity="center_horizontal" />
    <Button
        android:text="@string/button_userinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getUserinfo"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:text="@string/last_action_title"
        android:paddingTop="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:id="@+id/last_action"
        android:paddingBottom="20dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"/>
</LinearLayout>
